add_executable(test_array test_array.c)
add_executable(test_linked_list test_linked_list.c)
add_executable(test_queue_ll test_queue_ll.c)
add_executable(test_state_machine test_state_machine.c)
add_executable(test_hash_table test_hash_table.c)
add_executable(test_binary_search test_binary_search.c)

target_link_libraries(test_array array unity)
target_link_libraries(test_linked_list linked_list unity)
target_link_libraries(test_queue_ll queue_ll unity)
target_link_libraries(test_state_machine state_machine unity)
target_link_libraries(test_hash_table hash_table unity)
target_link_libraries(test_binary_search binary_search unity)

add_test(array test_array)
add_test(linked_list test_linked_list)
add_test(queue_ll, test_queue_ll)
add_test(state_machine, test_state_machine)
add_test(hash_table, test_hash_table)
add_test(binary_search test_binary_search)